Correction alignement saisie image culte

--- a/includes/assets/css/styleCO.css
+++ b/includes/assets/css/styleCO.css
@@ -287,6 +287,7 @@
 	max-width: 100%;
 	max-height: 100%;
 	vertical-align: middle;
+	margin-top: -3px;
 }
 
 .saisie_contexte_image
